--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "i18n": "Using i18n",
-  
+
   "drop": "Drop your files in this area ...",
   "release":"Now you can release mouse button!",
 
@@ -9,7 +9,7 @@
   "ICCSPC": "ICCSPC",
   "Copyright":"Copyright",
   "The feature will be implemented soon":"The feature was implemented soon",
-  
+
   "-->вкладки":"",
   "Tabs_vue": {
   "Upload":"Upload",
@@ -21,7 +21,7 @@
   "Already uploaded number in tab 1":"There is {count} already uploaded file",
   "Already uploaded number in tab 2":"There is {count} already uploaded files",
   "Selected files number in tab --- как памятка --- ": "На вкладке:\n- всего: {all_count}  - ({all_size_beauty})\n- валидных: {all_valid_count} - {all_valid_size_beauty}\n- не валидных: {all_bad_count} - {all_bad_size_beauty}\n- выделено: {all_selected_count} - {all_selected_size_beauty}\n- выделено (валид): {all_valid_selected_count} - {all_valid_selected_size_beauty}\n- выделено (невалид): {all_bad_selected_count} - {all_bad_selected_size_beauty}\n- отправляется: {all_valid_transfering_count} - {all_valid_transfering_size_beauty}\n- не отправляется: {all_valid_noneTransfering_count} - {all_valid_noneTransfering_size_beauty}",
-  "Selected files number in tab":"There is {all_count} file  ({all_size_beauty})", 
+  "Selected files number in tab":"There is {all_count} file  ({all_size_beauty})",
   "Stop transfer 1":"Stop uploading file",
   "Stop transfer 2":"Stop uploading files",
   "Selected files number tranfering in tab 1":"Currently, {all_valid_transfering_count} file is being uploaded to server",
@@ -53,11 +53,11 @@
     "Number of videos": "Number of videos",
     "Last updated":"Last updated"
   },
-  
+
   "--> модальное окно ==>":"...",
   "Prev":"Prev",
   "Next":"Next",
-  
+
   "--> всплывающие подсказки ==>":"...",
   "already uploaded":"It seems you have already uploaded this file to the server",
   "Cancelled": "Operation canceled by the user",
@@ -69,14 +69,14 @@
   "#":"#",
   "Preview": "Preview",
   "Status":"Status",
-  "Date":"Date", 
+  "Date":"Date",
   "Comments":"Comments",
   "Status":"Status",
   "Info":"Info",
   "Actions":"Actions",
   "Date of uploading":"Date of uploading",
 
-  "--> Логика в заголовках таблицы":"",  
+  "--> Логика в заголовках таблицы":"",
   "Sort by Name":"Sort by Name",
   "Sort the list by Name column":"Sort the list by Name column",
   "Sort by Size":"Sort by Size",
@@ -112,12 +112,12 @@
 
   "==> SelectedFiles_vue->":"",
   "You can't send this file":"You can't send this file",
-  "Upload the file":"Upload the file", 
+  "Upload the file":"Upload the file",
   "Delete the file":"Delete the file",
   "Stop transfering":"Stop transfering",
   "Stop":"Stop",
 
-  "==> rowTextArea_vue": "",  
+  "==> rowTextArea_vue": "",
   "Comments need to be reduced":"The comment will be reduced to {maxLen} characters",
   "The comment max size is": "The comment max size is {maxLen} characters",
   "Size has been exceeded":"Size has been exceeded",
@@ -126,7 +126,7 @@
   "==>>VideoPlayer_vue":"",
   "Brand click":"You are welcomed by the APCIS development team. Have a nice day",
   "The video preview is unavailable": "The video preview is unavailable",
-  
+
   "Bytes": "B",
   "KB": "KB",
   "MB": "MB",
@@ -135,7 +135,7 @@
 
   "Message sent successfully": "Message sent successfully",
   "An error occurred while sending the request": "An error occurred while sending the request",
-  
+
   " ====> actions.js ":"",
   "Successively uploaded":"<br>- successively uploaded: {suc_count}. ",
   "Uploaded with fail":"<br>- failed: {fail_count}",
@@ -149,10 +149,10 @@
   "Remove all report 2": "Removed: {deleted} files.",
   "Remove all report skipped 1": "Skipped: {skipped} file",
   "Remove all report skipped 2": "Skipped: {skipped} files",
-   
+
   "Upload selected text 1": "Upload selected",
   "Upload selected text 2": "Upload selected ({count})",
-  
+
   "Upload selected title 1": "Upload {count} selected file",
   "Upload selected title 2": "Upload {count} selected files",
   "Upload selected title without 1":"without ({all_bad_selected_count}) selected non valid file",
@@ -160,7 +160,7 @@
 
   "Send all text": "Send all  {count} valid ({size})",
   "Send all text ignor": "Send all other {count} ({size})",
-  
+
   "Send all other title 1": "We will append all other {count} file",
   "Send all other title 2": "We will append all other {count} files",
   "sendAllTitle 1": "We will upload {count} file ({size})",
@@ -175,10 +175,10 @@
   "transfering file":"transfering file",
   "transfering files":"transfering files",
   "Remove selected" :"Remove selected ({all_valid_noneTransfering_count})",
-  
+
   "Remove Selected Title 1": "Remove {count} selected file: \n- valid: {all_valid_selected_noneTransfering_count} ({all_valid_selected_noneTransfering_size_beauty});\n- non valid - {all_bad_selected_count} ({all_bad_selected_size_beauty})",
   "Remove Selected Title 2": "Remove {count} selected files:\n- valid: {all_valid_selected_noneTransfering_count} ({all_valid_selected_noneTransfering_size_beauty});\n- non valid - {all_bad_selected_count} ({all_bad_selected_size_beauty})",
-  
+
   "Stop all title 1": "Stop tranfer ({count})",
   "Stop all title 2": "Stop all tranfers ({count})",
 
@@ -199,12 +199,13 @@
 
   "Send-btn-text":"Send",
   "Send-btn-title":"Send report for the file",
-  
+
   "All-fine-btn-text":"All fine",
-  "All-fine-btn-title":"All fine"
+  "All-fine-btn-title":"All fine",
+
+ "=>offlineAlert_vue":"",
+  "online alert":"You're in online",
+  "offline alert":"You're in offline"
 
 
-
-  
-    
 }
