--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -66,7 +66,7 @@
   "--> заголовки таблицы ==>":"...",
     "Name":"Имя",
     "#":"№",
-    "Preview":"Превью",
+    "Preview":"Предварительный просмотр",
     "Status": "Статус",
     "Date":"Дата",
     "Comments":"Комментарии",
@@ -108,6 +108,7 @@
   "Is not uploaded":"Файл не загружен {name}",
   "Default displaying error in the table" : "Произошла ошибка при загрузке файла",
   "Network Error":"Сетевая ошибка",
+  "Url is wrong":"Параметры ссылки неверны! Попробуйте перезайти.",
 
 
   "==> SelectedFiles_vue->":"",
@@ -126,7 +127,7 @@
 
   "==>>VideoPlayer_vue":"",
   "Brand click":"Вас приветствует команда разработчиков этого приложения и желает хорошего дня!",
-  "The video preview is unavailable": "Превью недоступно",
+  "The video preview is unavailable": "Предварительный просмотр недоступен",
 
   "Bytes": "Б",
   "KB": "КБ",
