--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,215 +1,172 @@
 {
-    "i18n": "Используем i18n",
-
-    "drop": "Перетащите сюда Ваши файлы ...",
-    "release":"Теперь Вы можете отпустить мышку!",
-
-    "--> Хедер и футер:":" <-- ",
-    "Information Coordination Center of State Port Control": "Информационно-координационный центр государственного портового контроля",
-    "ICCSPC": "ИЦГПК",
-    "Copyright":"Все права защищены",
-    "The feature was implemented soon":"Функция будет реализована в ближайшее время",
-
-  "-->вкладки":"",
-  "Tabs_vue": {
-    "Upload":"Загрузить видео",
-    "Uploaded":"Загруженные видео",
-    "You-already-in-the-tab":"Вы уже находитесь в этом разделе",
-    "open-upload-section":"Нажмите, чтобы перейти в раздел загрузки видео",
-    "already-uploaded-section":"Нажмите, чтобы перейти в раздел просмотра загруженных видео",
-
-    "Already uploaded number in tab 1":"На сервере - {count} видео",
-    "Already uploaded number in tab 2":"На сервере - {count} видео",
-
-    "Selected files number in tab": "На вкладке:\n- всего: {all_count}  - ({all_size_beauty})\n- валидных: {all_valid_count} - {all_valid_size_beauty}\n- не валидных: {all_bad_count} - {all_bad_size_beauty}\n- выделено: {all_selected_count} - {all_selected_size_beauty}\n- выделено валид: {all_valid_selected_count} - {all_valid_selected_size_beauty}\n- выдел. невалид: {all_bad_selected_count} - {all_bad_selected_size_beauty}\n- отправляется: {all_valid_transfering_count} - {all_valid_transfering_size_beauty}\n- не отправляется: {all_valid_noneTransfering_count} - {all_valid_noneTransfering_size_beauty}",
-    "Stop transfer 1":"Остановить загрузку файла",
-    "Stop transfer 2":"Остановить загрузку всех файлов",
-    "Selected files number tranfering in tab 1":"Загружается {all_valid_transfering_count} файл",
-    "Selected files number tranfering in tab 2":"Загружается {all_valid_transfering_count} файла"
-  },
-
+  " ====> actions.js ": "",
+  " ===> UploadedRefreshBtn_VUE": "",
+  " ==> BugReport_vue": "...",
+  "#": "№",
+  "--> Логика в заголовках таблицы": "",
+  "--> Хедер и футер:": " <-- ",
+  "--> всплывающие подсказки ==>": "...",
+  "--> заголовки таблицы ==>": "...",
+  "--> модальное окно ==>": "...",
+  "-->actions": "-->",
+  "-->вкладки": "",
+  "===> mixins": "",
+  "==> BACKEND": "php",
+  "==> SelectedFiles_vue->": "",
+  "==> rowTextArea_vue": "",
+  "==>>VideoPlayer_vue": "",
+  "=>offlineAlert_vue": "",
+  "Actions": "Действия",
+  "All-fine-btn-text": "",
+  "All-fine-btn-title": "Ошибки нет или была исправлена",
+  "An error occurred while sending the request": "Произошла ошибка при выполнении запроса",
+  "An error occurred while write to data base": "Ошибка записи в базу данных. Попробуйте перезайти на сайт.",
+  "Brand click": "Вас приветствует команда разработчиков этого приложения и желает хорошего дня!",
+  "Bytes": "Б",
+  "Cancel-btn-text": "",
+  "Cancel-btn-title": "Закрыть форму",
+  "Cancelled": "Операция отменена пользователем",
+  "Cancelled by user": "Отменено пользователем!",
+  "Clear the list": "Очистить список",
+  "Comment": "Комментарий",
+  "Comments": "Комментарии",
+  "Comments need to be reduced": "Комментарий должен быть сокращен до {maxLen} символов",
+  "Copyright": "Все права защищены",
+  "Date": "Дата",
+  "Date of uploading": "Дата загрузки",
+  "Default displaying error in the table": "Произошла ошибка при загрузке файла",
+  "Delete the file": "Удалить файл",
+  "Error while preparing to send the file": "Ошибка при подготовке файла к отправке!",
+  "File already transferring": "Файл уже отправляется...",
+  "File name": "Имя файла:",
+  "Format not supported": "Формат не поддерживается",
+  "GB": "ГБ",
+  "Group the list by file formats": "Группировать список по типу файла",
+  "Group the list by selected files": "Группировать по выделенным",
   "Header_vue": {
     "About": "О нас",
-    "About_article":"Информационно-координационный центр государственного портового контроля",
-    "Help": "Помощь",
-    "How-To-Use":"Как пользоваться",
-    "Settings":"Настройки",
-    "Feedback":"Обратная связь",
-    "Brand": "Видео-хостинг",
-    "Brand_title":"",
+    "About_article": "Информационно-координационный центр государственного портового контроля",
     "Back-to-site": "Закрыть вкладку",
-    "Back-to-site_title":"Текущая вкладка закроется",
-    "already-ru":"Вы уже в русском интерфейсе",
-    "already-en":"Вы уже в английском интерфейсе",
-    "choose-ru-lang":"Изменить интерфейс на русский",
-    "choose-en-lang":"Change interface to ENGLISH",
-    "cant-close-window":"Судя по всему, вкладка не закрылась. Попробуйте самостоятельно его закрыть."
+    "Back-to-site_title": "Текущая вкладка закроется",
+    "Brand": "Видео-хостинг",
+    "Brand_title": "",
+    "Feedback": "Обратная связь",
+    "Help": "Помощь",
+    "How-To-Use": "Как пользоваться",
+    "Settings": "Настройки",
+    "already-en": "Вы уже в английском интерфейсе",
+    "already-ru": "Вы уже в русском интерфейсе",
+    "cant-close-window": "Судя по всему, вкладка не закрылась. Попробуйте самостоятельно его закрыть.",
+    "choose-en-lang": "Change interface to ENGLISH",
+    "choose-ru-lang": "Изменить интерфейс на русский"
   },
-
-  "Uploaded_vue": {
-    "Uploaded":"Загруженные",
-    "Already":"Список уже загруженных видео-файлов",
-    "Total duration": "Длительность, всего:",
-    "Number of videos":"Количество, всего:",
-    "Last updated":"Последнее обновление"
-  },
-    "--> модальное окно ==>":"...",
-    "Prev":"Предыдущий",
-    "Next":"Следующий",
-
-    "--> всплывающие подсказки ==>":"...",
-    "already uploaded":"Похоже, Вы уже загружали данное видео в рамках данного замечания",
-    "Cancelled": "Операция отменена пользователем",
-    "Comment":"Комментарий",
-    "File name":"Имя файла",
-
-  "--> заголовки таблицы ==>":"...",
-    "Name":"Имя",
-    "#":"№",
-    "Preview":"Предварительный просмотр",
-    "Status": "Статус",
-    "Date":"Дата",
-    "Comments":"Комментарии",
-    "Status":"Статус",
-    "Info":"Информация",
-    "Actions":"Действия",
-    "Date of uploading":"Дата загрузки",
-
-    "--> Логика в заголовках таблицы":"",
-    "Sort by Name":"Сортировать по имени",
-    "Sort the list by Name column":"Сортировать список по полю Имя",
-    "Sort by Size":"Сортировать по размеру",
-    "Sort the list by file sizes":"Сортировать список по параметру Размер",
-    "Sort by Type":"Группировать по типу",
-    "Group the list by file formats":"Группировать список по типу файла",
-    "Sort by Date":"Сортировать по дате",
-    "Sort the list by Modified":"Сортировать список по дате изменения",
-    "Sort by Selected":"Группировать выделенные",
-    "Group the list by selected files":"Группировать по выделенным",
-    "Sort by Comment":"Сортировать по комментариям",
-    "Sort the list by Comment column":"Сортировать по полю Комментарии",
-    "Sort by added":"Сортировать по добавлению",
-    "Sort the list by added":"Сортировать по порядку добавления файлов",
-
-
-  "-->actions":"-->",
-  "corrupt file":"Файл поврежден - <b>{filename}</b>",
-  "unsupported format": "Файл имеет формат, неподдерживаемый нашей системой - <b>{file.name}</b",
-  "Format not supported": "Формат не поддерживается",
-  "Max size exceeded": "Лимит размера файла превышен. Лимит - {maxSize} ГБ.",
-  "Size-is-OK":"Размер в пределах лимита",
-  "Type is OK":"Тип файла поддерживается",
-  "file is already selected":"Файл уже в списке - <b>{filename}</b>",
-  "Cancelled by user":"Отменено пользователем!",
-  "Error while preparing to send the file":"Ошибка при подготовке файла к отправке!",
-  "Url params is wrong":"Параметры ссылки неверны. Попробуйте перезайти в учетную запись.",
-  "File already transferring":"Файл уже отправляется...",
-  "Sucessifely uploaded":"<b>Успешно загружен файл</b> - {OrigFileName}",
-  "Is not uploaded":"Файл не загружен {name}",
-  "Default displaying error in the table" : "Произошла ошибка при загрузке файла",
-  "Network Error":"Сетевая ошибка",
-  "Url is wrong":"Параметры ссылки неверны! Попробуйте перезайти.",
-
-
-  "==> SelectedFiles_vue->":"",
-  "You can't send this file":"Вы не можете отправить этот файл",
-  "Upload the file":"Загрузить файл",
-  "Delete the file":"Удалить файл",
-  "Stop transfering":"Остановить отправку",
-  "Stop":"Остановить текущую операцию",
-
-  "==> rowTextArea_vue": "",
-  "Comments need to be reduced":"Комментарий должен быть сокращен до {maxLen} символов",
-  "The comment max size is": "Максимальный размер комментария - {maxLen} символов",
-  "Size has been exceeded":"Размер превышен",
-  "Limit size":"Лимит размера файла",
-
-
-  "==>>VideoPlayer_vue":"",
-  "Brand click":"Вас приветствует команда разработчиков этого приложения и желает хорошего дня!",
-  "The video preview is unavailable": "Предварительный просмотр недоступен",
-
-  "Bytes": "Б",
+  "ICCSPC": "ИЦГПК",
+  "Info": "Информация",
+  "Information Coordination Center of State Port Control": "Информационно-координационный центр государственного портового контроля",
+  "Is not uploaded": "Файл не загружен {name}",
   "KB": "КБ",
+  "Last report reason": "Предыдущее сообщение об ошибке:",
+  "Limit size": "Лимит размера файла",
   "MB": "МБ",
-  "GB": "ГБ",
-
-
+  "Max size exceeded": "Лимит размера файла превышен. Лимит - {maxSize} ГБ.",
   "Message sent successfully": "Сообщение успешно отправлено",
-  "An error occurred while sending the request": "Произошла ошибка при выполнении запроса",
-
-  " ====> actions.js ":"",
-  "Successively uploaded":"<br>- успешно отправлено: {suc_count};",
-  "Uploaded with fail":"<br>- отправлено с ошибкой: {fail_count};",
-  "Upload all done with error":"Возникла ошибка при загрузке всех файлов: {err}",
-  "Send all report":"Загрузить все: {report}",
-
-  "===> mixins":"",
+  "Name": "Имя",
+  "Network Error": "Сетевая ошибка",
+  "Next": "Следующий",
+  "Please wait while sending message": "Подождите, идет отправка сообщения",
+  "Prev": "Предыдущий",
+  "Preview": "Предварительный просмотр",
+  "Remove Selected Title 1": "Удалить {count} выделенный файл: \n- валидных: {all_valid_selected_noneTransfering_count} ({all_valid_selected_noneTransfering_size_beauty}); \n- не валидных: {all_bad_selected_count} ({all_bad_selected_size_beauty})",
+  "Remove Selected Title 2": "Удалить {count} выделенных файла:\n- валидных: {all_valid_selected_noneTransfering_count} ({all_valid_selected_noneTransfering_size_beauty}); \n- не валидных: {all_bad_selected_count} ({all_bad_selected_size_beauty})",
   "Remove all completely 1": "Очистили список ({deleted} файл был удален)",
   "Remove all completely 2": "Мы полностью очистили список ({deleted} файла было удалено)",
   "Remove all report 1": "Удален: {deleted} файл.",
   "Remove all report 2": "Удалено: {deleted} файла.",
   "Remove all report skipped 1": "Пропущен: {skipped} файл",
   "Remove all report skipped 2": "Пропущено: {skipped} файла",
-
-  "Upload selected text 1": "Загрузить выделенный",
-  "Upload selected text 2": "Загрузить выделенные ({count})",
-
-  "Upload selected title 1": "Загрузить {count} выделенный файл",
-  "Upload selected title 2": "Загрузить {count} выделенных файла",
-  "Upload selected title without 1":"без {all_bad_selected_count} выделенного невалидного файла",
-  "Upload selected title without 2":"без {all_bad_selected_count}  выделенных невалидных файла",
-
-  "Send all text": "Отправить все {count} ({size})",
-  "Send all text ignor": "Отправить все остальные {count} ({size})",
-
+  "Remove all text": "Удалить все ({all_noneTransfering_count}, {all_noneTransfering_size_beauty})",
+  "Remove selected": "Удалить выделенные ({all_valid_noneTransfering_count})",
+  "Report form": "Форма оповещения",
   "Send all other title 1": "Мы добавим в загрузку {count} файл",
   "Send all other title 2": "Мы добавим в загрузку остальные {count} файла",
+  "Send all report": "Загрузить все: {report}",
+  "Send all text": "Отправить все {count} ({size})",
+  "Send all text ignor": "Отправить все остальные {count} ({size})",
+  "Send bug-report about the video to developers": "Оповестить разработчиков об ошибке",
+  "Send-btn-text": "Отправить",
+  "Send-btn-title": "Отправить ошибку разработчикам",
+  "Size has been exceeded": "Размер превышен",
+  "Size-is-OK": "Размер в пределах лимита",
+  "Sort by Comment": "Сортировать по комментариям",
+  "Sort by Date": "Сортировать по дате",
+  "Sort by Name": "Сортировать по имени",
+  "Sort by Selected": "Группировать выделенные",
+  "Sort by Size": "Сортировать по размеру",
+  "Sort by Type": "Группировать по типу",
+  "Sort by added": "Сортировать по добавлению",
+  "Sort the list by Comment column": "Сортировать по полю Комментарии",
+  "Sort the list by Modified": "Сортировать список по дате изменения",
+  "Sort the list by Name column": "Сортировать список по полю Имя",
+  "Sort the list by added": "Сортировать по порядку добавления файлов",
+  "Sort the list by file sizes": "Сортировать список по параметру Размер",
+  "Status": "Статус",
+  "Stop": "Остановить текущую операцию",
+  "Stop all title 1": "Остановить загрузку ({count})",
+  "Stop all title 2": "Остановить все загрузки ({count})",
+  "Stop transfering": "Остановить отправку",
+  "Successively uploaded": "<br>- успешно отправлено: {suc_count};",
+  "Sucessifely uploaded": "<b>Успешно загружен файл</b> - {OrigFileName}",
+  "Tabs_vue": {
+    "Already uploaded number in tab 1": "На сервере - {count} видео",
+    "Already uploaded number in tab 2": "На сервере - {count} видео",
+    "Selected files number in tab": "На вкладке:\n- всего: {all_count}  - ({all_size_beauty})\n- валидных: {all_valid_count} - {all_valid_size_beauty}\n- не валидных: {all_bad_count} - {all_bad_size_beauty}\n- выделено: {all_selected_count} - {all_selected_size_beauty}\n- выделено валид: {all_valid_selected_count} - {all_valid_selected_size_beauty}\n- выдел. невалид: {all_bad_selected_count} - {all_bad_selected_size_beauty}\n- отправляется: {all_valid_transfering_count} - {all_valid_transfering_size_beauty}\n- не отправляется: {all_valid_noneTransfering_count} - {all_valid_noneTransfering_size_beauty}",
+    "Selected files number tranfering in tab 1": "Загружается {all_valid_transfering_count} файл",
+    "Selected files number tranfering in tab 2": "Загружается {all_valid_transfering_count} файла",
+    "Stop transfer 1": "Остановить загрузку файла",
+    "Stop transfer 2": "Остановить загрузку всех файлов",
+    "Upload": "Загрузить видео",
+    "Uploaded": "Загруженные видео",
+    "You-already-in-the-tab": "Вы уже находитесь в этом разделе",
+    "already-uploaded-section": "Нажмите, чтобы перейти в раздел просмотра загруженных видео",
+    "open-upload-section": "Нажмите, чтобы перейти в раздел загрузки видео"
+  },
+  "The comment max size is": "Максимальный размер комментария - {maxLen} символов",
+  "The feature was implemented soon": "Функция будет реализована в ближайшее время",
+  "The video preview is unavailable": "Предварительный просмотр недоступен",
+  "Type is OK": "Тип файла поддерживается",
+  "Upload all done with error": "Возникла ошибка при загрузке всех файлов: {err}",
+  "Upload selected text 1": "Загрузить выделенный",
+  "Upload selected text 2": "Загрузить выделенные ({count})",
+  "Upload selected title 1": "Загрузить {count} выделенный файл",
+  "Upload selected title 2": "Загрузить {count} выделенных файла",
+  "Upload selected title without 1": "без {all_bad_selected_count} выделенного невалидного файла",
+  "Upload selected title without 2": "без {all_bad_selected_count}  выделенных невалидных файла",
+  "Upload the file": "Загрузить файл",
+  "Uploaded with fail": "<br>- отправлено с ошибкой: {fail_count};",
+  "Uploaded_vue": {
+    "Already": "Список уже загруженных видео-файлов",
+    "Last updated": "Последнее обновление",
+    "Number of videos": "Количество, всего:",
+    "Total duration": "Длительность, всего:",
+    "Uploaded": "Загруженные"
+  },
+  "Url is wrong": "Параметры ссылки неверны! Попробуйте перезайти.",
+  "Url params is wrong": "Параметры ссылки неверны. Попробуйте перезайти в учетную запись.",
+  "You can't send this file": "Вы не можете отправить этот файл",
+  "already uploaded": "Похоже, Вы уже загружали данное видео в рамках данного замечания",
+  "corrupt file": "Файл поврежден - <b>{filename}</b>",
+  "drop": "Перетащите сюда Ваши файлы ...",
+  "file is already selected": "Файл уже в списке - <b>{filename}</b>",
+  "i18n": "Используем i18n",
+  "offline alert": "Кажется, мы потеряли соединение с интернетом...",
+  "online alert": "Вы вернулись в онлайн!",
+  "release": "Теперь Вы можете отпустить мышку!",
   "sendAllTitle 1": "Мы загрузим {count} файл ({size})",
   "sendAllTitle 2": "Мы загрузим {count} файла ({size})",
   "sendAllTitle ignore 1": "\nи проигнорируем {count} невалидный файл",
   "sendAllTitle ignore 2": "\nи проигнориуем {count} неподдерживаемых файла",
-
-  "Remove all text":"Удалить все ({all_noneTransfering_count}, {all_noneTransfering_size_beauty})",
-
-  "Clear the list":"Очистить список",
-  "skip":"пропуская",
-  "transfering file":"передающийся файл",
-  "transfering files":"передающихся файлов",
-  "Remove selected" :"Удалить выделенные ({all_valid_noneTransfering_count})",
-
-  "Remove Selected Title 1": "Удалить {count} выделенный файл: \n- валидных: {all_valid_selected_noneTransfering_count} ({all_valid_selected_noneTransfering_size_beauty}); \n- не валидных: {all_bad_selected_count} ({all_bad_selected_size_beauty})",
-  "Remove Selected Title 2": "Удалить {count} выделенных файла:\n- валидных: {all_valid_selected_noneTransfering_count} ({all_valid_selected_noneTransfering_size_beauty}); \n- не валидных: {all_bad_selected_count} ({all_bad_selected_size_beauty})",
-
-  "Stop all title 1": "Остановить загрузку ({count})",
-  "Stop all title 2": "Остановить все загрузки ({count})",
-
-
-  " ===> UploadedRefreshBtn_VUE":"",
-  "Network Error": "Сетевая ошибка",
-
-  " ==> BugReport_vue":"...",
-  "Report form":"Форма оповещения",
-  "Please wait while sending message":"Подождите, идет отправка сообщения",
-  "Send bug-report about the video to developers":"Оповестить разработчиков об ошибке",
-
-  "Last report reason":"Предыдущее сообщение об ошибке:",
-  "File name":"Имя файла:",
-
-  "Cancel-btn-text":"",
-  "Cancel-btn-title":"Закрыть форму",
-
-  "Send-btn-text":"Отправить",
-  "Send-btn-title":"Отправить ошибку разработчикам",
-
-  "All-fine-btn-text":"",
-  "All-fine-btn-title":"Ошибки нет или была исправлена",
-
-  "=>offlineAlert_vue":"",
-   "online alert":"Вы вернулись в онлайн!",
-   "offline alert":"Кажется, мы потеряли соединение с интернетом...",
-
-   "==> BACKEND":"php",
-   "An error occurred while write to data base": "Ошибка записи в базу данных. Попробуйте перезайти на сайт."
-
-  }
+  "skip": "пропуская",
+  "transfering file": "передающийся файл",
+  "transfering files": "передающихся файлов",
+  "unsupported format": "Файл имеет формат, неподдерживаемый нашей системой - <b>{file.name}</b"
+}
