--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -135,6 +135,9 @@
   "The feature will be implemented soon": "The feature was implemented soon",
   "The video preview is unavailable": "The video preview is unavailable",
   "Type is OK": "Type is OK",
+    "Duration is OK": "Duration is OK (max - {maxDuration} min)",
+    "Duration is exceeded":"Duration is exceeded (max - {maxDuration} min)",
+    "Duration is not defined":"Duration is not defined",
   "Upload all done with error": "Upload all done with error {err}",
   "Upload selected text 1": "Upload selected",
   "Upload selected text 2": "Upload selected ({count})",
