--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -134,6 +134,9 @@
   "The feature was implemented soon": "Функция будет реализована в ближайшее время",
   "The video preview is unavailable": "Предварительный просмотр недоступен",
   "Type is OK": "Тип файла поддерживается",
+    "Duration is OK": "Длительность в пределах нормы (макс. - {maxDuration} мин.)",
+    "Duration is exceeded":"Длительность превышена (макс. - {maxDuration} мин.)",
+    "Duration is not defined":"Длительность не определена",
   "Upload all done with error": "Возникла ошибка при загрузке всех файлов: {err}",
   "Upload selected text 1": "Загрузить выделенный",
   "Upload selected text 2": "Загрузить выделенные ({count})",
